--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     display: flex ;
     gap: 10px;
 }
-@media  (max-width:600x) {
+@media  (max-width:600px) {
     body{
         background-color: black;
     }
