--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
         border-radius: 25px;
         a{
             text-decoration: none;
-            
+
         }
 
 }
@@ -30,6 +30,9 @@
     gap: 10px;
 }
 @media  (max-width:600px) {
+    *{
+        background-color: white;
+    }
     h1{
         text-align: center;
         background-color: rgb(0, 0, 0);
