--- a/style.css
+++ b/style.css
@@ -30,9 +30,11 @@
     gap: 10px;
 }
 @media  (max-width:600px) {
-    *{
-        background-color: white;
+    
+    body{
+         background-image: url(v.png);
     }
+    
     h1{
         text-align: center;
         background-color: rgb(0, 0, 0);
@@ -40,18 +42,19 @@
         border-radius: 25px;
     }
     .one{
-        height: 50px;
+        height: 100px;
         width: 200px;
-        font-size: 10px;
+        font-size: 15px;
 
     }
     .two{
         
-        height: 50px;
+        height: 100px;
         width: 200px;
-        font-size: 10px;
+        font-size: 15px;
+        
         
 
     }
-    }
+}
 
