--- a/style.css
+++ b/style.css
@@ -56,5 +56,12 @@
         
 
     }
+    img{
+        height: 60px;
+        width: 60px;
+    }
+    a{
+        text-decoration: none;
+    }
 }
 
